--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,18 @@
           <version>3.0.0</version>
         </plugin>
 
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.1.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>main.java.mx.uv.TiendaWS</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
         
       </plugins>
     </pluginManagement>
