--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,19 @@
             </execution>
         </executions>
     </plugin>
+
+    <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.1.0</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>mx.uv.TiendaWS</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
         
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
