--- a/pom.xml
+++ b/pom.xml
@@ -119,24 +119,14 @@
             </execution>
         </executions>
     </plugin>
-
-    <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>3.1.0</version>
-            <configuration>
-                <archive>
-                    <manifest>
-                        <mainClass>mx.uv.TiendaWS</mainClass>
-                    </manifest>
-                </archive>
-            </configuration>
-        </plugin>
         
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <version>3.2.4</version> <!-- Usa la versión más reciente -->
+            <version>3.2.4</version>
+            <configuration>
+                <createDependencyReducedPom>false</createDependencyReducedPom>
+            </configuration>
             <executions>
                 <execution>
                     <phase>package</phase>
@@ -144,7 +134,11 @@
                         <goal>shade</goal>
                     </goals>
                     <configuration>
-                        <createDependencyReducedPom>false</createDependencyReducedPom>
+                        <transformers>
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>mx.uv.TiendaWS</mainClass>
+                            </transformer>
+                        </transformers>
                     </configuration>
                 </execution>
             </executions>
