--- a/pom.xml
+++ b/pom.xml
@@ -136,10 +136,7 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <version>3.2.4</version>
-            <configuration>
-                <createDependencyReducedPom>false</createDependencyReducedPom>
-            </configuration>
+            <version>3.2.4</version> <!-- Usa la versión más reciente -->
             <executions>
                 <execution>
                     <phase>package</phase>
@@ -147,11 +144,7 @@
                         <goal>shade</goal>
                     </goals>
                     <configuration>
-                        <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <mainClass>mx.uv.TiendaWS</mainClass>
-                            </transformer>
-                        </transformers>
+                        <createDependencyReducedPom>false</createDependencyReducedPom>
                     </configuration>
                 </execution>
             </executions>
